fix: banner text truncation on small sizes

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -56,10 +56,6 @@ body {
     }
 }
 
-.headers-body-bg {
-    background: #111113 !important;
-}
-
 :root {
     --spacer: #{$spacer};
     --bs-link-color-rgb: var(--ks-content-link);
